fixing a minimum width for the map so the filter menu doesn't overlap launch sites

--- a/css/visualization_styles.css
+++ b/css/visualization_styles.css
@@ -19,9 +19,11 @@ circle {
 }
 
 #container {
-  margin:10px 10%;
+  margin: 10px auto;
+  width: 80%;
   height:100%;
   position: relative;
+  min-width: 1024px;
 }
 
 #sliderContainer {
